--- a/trunk/media/styles/ie.css
+++ b/trunk/media/styles/ie.css
@@ -62,9 +62,7 @@ ul.programs {border: none;}
 .marquee{
 position: relative;
 }
-.home-sidebar{
-	background: url('../images/nav_secondary_bg.png') left bottom no-repeat ;
-}
+
 .updates_box{
 	margin-top: 20px;
 }
@@ -72,7 +70,9 @@ position: relative;
 	padding-bottom: 20px;
 }
 .secondary-nav{
-	background: url('../images/nav_secondary_bg.png') left bottom no-repeat;
+	border-top: 2px solid #f0f0ef;
+	border-right: 2px solid #f0f0ef;
+	width: 255px;
 }
 .subsidy-charts.alternate table{
 	border-left: 1px solid white;
@@ -86,14 +86,30 @@ div.subsidy-charts table{
 	border-left: 1px solid white;
 }
 
+table{
+	border-left: 1px solid white;
+}
+
+.display_type, .date_range{
+	display: block;
+	float: left;
+}
 
 
+.date_range{
+	float: left;
+	margin-right: 20px;
+	margin-right: 20px;
+	margin-left: 119px;
+}
 
+#filterForm, #loaderForm{
+	margin-bottom: 70px;
+}
 
-
-
-
-
+#global-pted-search{
+	left: 0px;
+}
 
 
 
